# multigen

./: .env.example  .gitignore  MultiGenAi.py  README.md  pyproject.toml  requirements.txt  test_failures.txt
apps/: streamlit_app.py
legacy/: README.md
legacy/temporal/: motion_engine.py  optical_flow.py
multigenai/: __init__.py  cli.py
multigenai/api/: __init__.py  rest_api.py  websocket.py
multigenai/consistency/: controlnet_manager.py  ip_adapter_manager.py  scene_memory.py
multigenai/control/: __init__.py  consistency_enforcer.py  controlnet_manager.py  guidance_manager.py
multigenai/core/: __init__.py  capability_report.py  device_manager.py  environment.py  exceptions.py  execution_context.py  generation_manager.py  lifecycle.py  metrics.py  model_lifecycle.py  model_registry.py  temporal_state.py
multigenai/creative/: __init__.py  prompt_compiler.py  scene_designer.py
multigenai/engines/: __init__.py
multigenai/identity/: __init__.py  face_encoder.py  identity_latent_encoder.py  identity_resolver.py
multigenai/llm/: __init__.py  prompt_engine.py  (+3 more)
tests/: __init__.py  test_compute_stability.py  test_debug_path.py  test_environment.py  test_identity.py  test_identity_latent.py  test_llm_providers.py  test_local_rife_integration.py  test_phase1.py  test_phase10_consistency.py  test_phase11_continuity.py  test_phase11_latent_fix.py  test_phase7_hardening.py  test_phase7_optimization.py  test_phase8_interpolation.py  test_phase9_prompt_processing.py  test_trajectory_encoder.py
tools/: motion_flow_check.py  system_check.py  temporal_stability.py
(+56 files in other folders)
